# serve-directory

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: main.rs  route_utils.rs  routes.rs  styles.css
src/handlers/: markdown.rs  mod.rs
