[package]
name = "serve-directory"
version = "0.1.0"
authors = ["Joseph Skubal"]
edition = "2018"
repository = "https://gitlab.com/skubalj/serve-directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = "1.1.0"
env_logger = "0.8.4"
lazy_static = "1.4.0"
log = "0.4.14"
structopt = "0.3.21"
tokio = { version = "1.7.0", features = ["macros", "rt-multi-thread", "signal"] }
warp = "0.3.1"