[package]
name = "serve-directory"
version = "0.1.0"
authors = ["Joseph Skubal"]
edition = "2018"
repository = "https://gitlab.com/skubalj/serve-directory"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build_html = { git = "https://gitlab.com/skubalj/build-html" }
env_logger = "0.8.4"
lazy_static = "1.4.0"
local_ipaddress = "0.1.3"
log = "0.4.14"
structopt = "0.3.23"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3.1"

[profile.release]
lto = true
